# task-management-python

./: .gitignore
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/common/: entity.py
apps/api/app/core/: config.py  database.py  logger.py
apps/api/app/database/: db.py
apps/web/: bun.lockb  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/shared/: index.ts
apps/web/src/components/shared/theme-color-toggle/: index.tsx
apps/web/src/components/shared/theme-mode-toggle/: index.tsx
apps/web/src/components/ui/button/: index.tsx
apps/web/src/components/ui/select/: index.tsx
apps/web/src/context/: index.ts  theme-data-provider.tsx
apps/web/src/lib/: index.ts  theme-colors.ts
apps/web/src/types/: index.ts
