[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SM Tanimur Rahman <smtanimurrahman404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
